Добавил модификатор на лого и соцсети

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/portfolio.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
   <body class="page">
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-          <a class="logo" href="index.html"
-            >Web<span class="accent">Studio</span></a
+          <a class="logo logo-header" href="index.html"
+            >Web<span class="nav_color_dark">Studio</span></a
           >
           <ul class="nav__site">
             <li class="site-list">
@@ -275,29 +275,41 @@
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p class="team__text">Product Designer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s1instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s2twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s3facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s4linkedin"></use>
                       </svg>
@@ -316,29 +328,41 @@
                 <h3 class="team__title">Ольга Репина</h3>
                 <p class="team__text">Frontend Developer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s1instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s2twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s3facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s4linkedin"></use>
                       </svg>
@@ -357,29 +381,41 @@
                 <h3 class="team__title">Николай Тарасов</h3>
                 <p class="team__text">Marketing</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s1instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s2twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s3facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s4linkedin"></use>
                       </svg>
@@ -398,29 +434,41 @@
                 <h3 class="team__title">Михаил Ермаков</h3>
                 <p class="team__text">UI Designer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s1instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s2twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s3facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
+                  <li class="social-item social-item-team">
+                    <a
+                      class="social-link social-link_background-color_light"
+                      href=""
+                    >
                       <svg class="social-logo" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-s4linkedin"></use>
                       </svg>
@@ -487,8 +535,8 @@
     <footer class="section-last">
       <div class="container container-footer">
         <div class="footer-card-left">
-          <a class="logo" href="./index.html"
-            >Web<span class="accent-secondary">Studio</span></a
+          <a class="logo logo-footer" href="./index.html"
+            >Web<span class="nav_color_light">Studio</span></a
           >
           <ul class="footer-raws">
             <li class="footer-list">
@@ -512,28 +560,28 @@
           <h3 class="footer-title-ctr">присоединяйтесь</h3>
           <ul class="social-list">
             <li class="social-item footer-social">
-              <a class="footer-social__link" href="">
+              <a class="social-link social-link_background-color_dark" href="">
                 <svg class="footer-social__logo" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-s1instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer-social">
-              <a class="footer-social__link" href="">
+              <a class="social-link social-link_background-color_dark" href="">
                 <svg class="footer-social__logo" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-s2twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer-social">
-              <a class="footer-social__link" href="">
+              <a class="social-link social-link_background-color_dark" href="">
                 <svg class="footer-social__logo" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-s3facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item footer-social">
-              <a class="footer-social__link" href="">
+              <a class="social-link social-link_background-color_dark" href="">
                 <svg class="footer-social__logo" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-s4linkedin"></use>
                 </svg>
