--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
       </section>
       <!-- section2 Features -->
-      <section class="feature">
+      <section class="section feature">
         <div class="container">
           <ul class="feature__list">
             <li>
@@ -261,7 +261,7 @@
       <!-- section4 our team -->
       <section class="section best">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
               <img
@@ -481,7 +481,7 @@
       <!--regular customers-->
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
+          <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-item">
               <a class="client-link" href="">
