--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body class="page">
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="nav">
           <a class="logo logo-header" href="index.html"
@@ -56,7 +56,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- section1 hero -->
       <section class="hero">
@@ -154,7 +154,7 @@
       <section class="section feature">
         <div class="container">
           <ul class="feature__list">
-            <li>
+            <li class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f1antenna"></use>
@@ -166,7 +166,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li  class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f2clock"></use>
@@ -178,7 +178,7 @@
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li  class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f3diagram"></use>
@@ -190,7 +190,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f4astronaut"></use>
@@ -206,7 +206,7 @@
         </div>
       </section>
       <!-- section3 work examples -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="work-fotos">
@@ -257,9 +257,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- section4 our team -->
-      <section class="section best">
+      <!-- <section class="section best">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
@@ -477,9 +477,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--regular customers-->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="client-list">
@@ -528,9 +528,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- footer -->
-    <footer class="section-last">
+    <!-- <footer class="section-last">
       <div class="container container-footer">
         <div class="footer-card-left">
           <a class="logo logo-footer" href="./index.html"
@@ -609,7 +609,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
