--- a/index.html
+++ b/index.html
@@ -160,35 +160,41 @@
                   <use href="./images/icons.svg#icon-f1antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature__title">Внимание к деталям</h3>
-              <p class="feature__text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__title">Внимание к деталям</h3>
+                <p class="feature__text">
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </div>
             </li>
-            <li  class="feature__item">
+            <li class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f2clock"></use>
                 </svg>
               </div>
-              <h3 class="feature__title">Пунктуальность</h3>
-              <p class="feature__text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__title">Пунктуальность</h3>
+                <p class="feature__text">
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </div>
             </li>
-            <li  class="feature__item">
+            <li class="feature__item">
               <div class="feature__iconbox">
                 <svg class="feature__icon" width="70px" height="70px">
                   <use href="./images/icons.svg#icon-f3diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature__title">Планирование</h3>
-              <p class="feature__text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__title">Планирование</h3>
+                <p class="feature__text">
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </div>
             </li>
             <li class="feature__item">
               <div class="feature__iconbox">
@@ -196,17 +202,19 @@
                   <use href="./images/icons.svg#icon-f4astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature__title">Современные технологии</h3>
-              <p class="feature__text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__title">Современные технологии</h3>
+                <p class="feature__text">
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <!-- section3 work examples -->
-      <!-- <section class="section">
+      <section class="section work-examples">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="work-fotos">
@@ -257,14 +265,15 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- section4 our team -->
-      <!-- <section class="section best">
+      <section class="section section-team">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
               <img
+                class="team__img"
                 src="./images/photo1.jpg"
                 width="270"
                 alt="мужчина в очках с бородой"
@@ -318,6 +327,7 @@
             </li>
             <li class="team__item">
               <img
+                class="team__img"
                 src="./images/photo2.jpg"
                 width="270"
                 alt="девушка блондинка в очках"
@@ -371,6 +381,7 @@
             </li>
             <li class="team__item">
               <img
+                class="team__img"
                 src="./images/photo3.jpg"
                 width="270"
                 alt="парень с бородой"
@@ -424,6 +435,7 @@
             </li>
             <li class="team__item">
               <img
+                class="team__img"
                 src="./images/photo4.jpg"
                 width="270"
                 alt="парень с бородой и очками"
@@ -477,9 +489,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--regular customers-->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="client-list">
@@ -528,67 +540,83 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- footer -->
-    <!-- <footer class="section-last">
+    <footer class="section-last">
       <div class="container container-footer">
-        <div class="footer-card-left">
-          <a class="logo logo-footer" href="./index.html"
-            >Web<span class="nav_color_light">Studio</span></a
-          >
-          <ul class="footer-raws">
-            <li class="footer-list">
-              <address class="footer-list__address">
-                г. Киев, пр-т Леси Украинки, 26
-              </address>
-            </li>
-            <li class="footer-list">
-              <a class="footer-list__link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-list">
-              <a class="footer-list__link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="footer-card-center">
-          <h3 class="footer-title-ctr">присоединяйтесь</h3>
-          <ul class="social-list">
-            <li class="social-item footer-social">
-              <a class="social-link social-link_background-color_dark" href="">
-                <svg class="footer-social__logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s1instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social">
-              <a class="social-link social-link_background-color_dark" href="">
-                <svg class="footer-social__logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s2twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social">
-              <a class="social-link social-link_background-color_dark" href="">
-                <svg class="footer-social__logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s3facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social">
-              <a class="social-link social-link_background-color_dark" href="">
-                <svg class="footer-social__logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s4linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-join">
+          <div class="footer-card-left">
+            <a class="logo logo-footer" href="./index.html"
+              >Web<span class="nav_color_light">Studio</span></a
+            >
+            <ul class="footer-raws">
+              <li class="footer-list">
+                <address class="footer-list__address">
+                  г. Киев, пр-т Леси Украинки, 26
+                </address>
+              </li>
+              <li class="footer-list">
+                <a class="footer-list__link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-list">
+                <a class="footer-list__link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer-card-center">
+            <h3 class="footer-title-ctr">присоединяйтесь</h3>
+            <ul class="social-list">
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s1instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s2twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s3facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s4linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-card-right">
-          <h3 class="footer-card-right__title">Подпишитесь на рассылку</h3>
+          <h3 class="footer-title-ctr footer-card-right__title">
+            Подпишитесь на рассылку
+          </h3>
           <div class="footer-card-right__cont">
             <form class="footer-form" name="submit">
               <label class="submit-label">
@@ -609,7 +637,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
   </body>
 </html>
