--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="page">
-    <header class="header-page">
+    <!-- <header class="header-page">
       <div class="container header-container">
         <nav class="container-nav">
           <a class="logo" href="index.html"
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Work examples -->
       <section class="section">
@@ -280,7 +280,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="section-last">
+    <!-- <footer class="section-last">
       <div class="container container-footer">
         <div class="footer-card-left">
           <a class="logo" href="./index.html"
@@ -359,6 +359,6 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
