--- a/index.html
+++ b/index.html
@@ -19,12 +19,30 @@
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body class="page">
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="nav">
           <a class="logo logo-header" href="index.html"
             >Web<span class="nav_color_dark">Studio</span></a
           >
+          <button
+            class="menu-toggle js-open-menu"
+            type="button"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              class="menu-btn__icon-m"
+              width="40px"
+              height="40px"
+              aria-label="Переключатель меню"
+            >
+              <use
+                class="menu-btn__icn-menu"
+                href="./images/icons.svg#menu_nav"
+              ></use>
+            </svg>
+          </button>
           <ul class="nav__site">
             <li class="site-list">
               <a class="site-list__link active" href="./index.html">Студия</a>
@@ -39,7 +57,7 @@
         </nav>
         <ul class="nav__auth">
           <li class="auth-list">
-            <a class="auth-list__link" href="">
+            <a class="auth-list__link" href="mailto:info@devstudio.com">
               <svg class="btn-mail" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -47,7 +65,7 @@
             >
           </li>
           <li class="auth-list">
-            <a class="auth-list__link" href="">
+            <a class="auth-list__link" href="+380961111111">
               <svg class="btn-phone" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -55,8 +73,56 @@
             >
           </li>
         </ul>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button class="menu-toggle js-close-menu" type="button">
+            <svg
+              class="menu-btn__icon-close"
+              width="40px"
+              height="40px"
+              aria-label="Переключатель меню"
+            >
+              <use
+                class="menu-btn__icon-c"
+                href="./images/icons.svg#close_nav"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu-container__box">
+            <ul class="menu-site">
+              <li class="menu-list">
+                <a class="menu-list__link active" href="./index.html">Студия</a>
+              </li>
+              <li class="menu-list">
+                <a class="menu-list__link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="menu-list">
+                <a class="menu-list__link" href="">Контакты</a>
+              </li>
+            </ul>
+            <div class="modal-bottom">
+              <a class="link_m-tel" href="+380961111111"> +38 096 111 11 11</a>
+              <a class="link_m-mail" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+              <ul class="m-social">
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Instagram</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Twitter</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Facebook</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- section1 hero -->
       <section class="hero">
@@ -639,5 +705,12 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
