--- a/portfolio.html
+++ b/portfolio.html
@@ -15,41 +15,60 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body class="page">
-    <!-- <header class="header-page">
-      <div class="container header-container">
-        <nav class="container-nav">
-          <a class="logo" href="index.html"
-            >Web<span class="accent">Studio</span></a
+    <header class="header">
+      <div class="container header__container">
+        <nav class="nav">
+          <a class="logo logo-header" href="index.html"
+            >Web<span class="nav_color_dark">Studio</span></a
           >
-          <ul class="site-nav">
-            <li class="site-nav-item">
-              <a class="site-nav-link" href="./index.html">Студия</a>
+          <button
+            class="menu-toggle js-open-menu"
+            type="button"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              class="menu-btn__icon-m"
+              width="40px"
+              height="40px"
+              aria-label="Переключатель меню"
+            >
+              <use
+                class="menu-btn__icn-menu"
+                href="./images/icons.svg#menu_nav"
+              ></use>
+            </svg>
+          </button>
+          <ul class="nav__site">
+            <li class="site-list">
+              <a class="site-list__link" href="./index.html">Студия</a>
             </li>
-            <li class="site-nav-item">
-              <a class="site-nav-link active" href="./portfolio.html"
+            <li class="site-list">
+              <a class="site-list__link active" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="site-nav-item">
-              <a class="site-nav-link" href="">Контакты</a>
+            <li class="site-list">
+              <a class="site-list__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="auth-nav">
-          <li class="auth-nav-item">
-            <a class="auth-nav-link" href="">
+        <ul class="nav__auth">
+          <li class="auth-list">
+            <a class="auth-list__link" href="mailto:info@devstudio.com">
               <svg class="btn-mail" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="auth-nav-item">
-            <a class="auth-nav-link" href="">
+          <li class="auth-list">
+            <a class="auth-list__link" href="tel:+380961111111">
               <svg class="btn-phone" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -57,8 +76,56 @@
             >
           </li>
         </ul>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button class="menu-toggle js-close-menu" type="button">
+            <svg
+              class="menu-btn__icon-close"
+              width="40px"
+              height="40px"
+              aria-label="Переключатель меню"
+            >
+              <use
+                class="menu-btn__icon-c"
+                href="./images/icons.svg#close_nav"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu-container__box">
+            <ul class="menu-site">
+              <li class="menu-list">
+                <a class="menu-list__link" href="./index.html">Студия</a>
+              </li>
+              <li class="menu-list">
+                <a class="menu-list__link active" href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="menu-list">
+                <a class="menu-list__link" href="">Контакты</a>
+              </li>
+            </ul>
+            <div class="modal-bottom">
+              <a class="link_m-tel" href="tel:+380961111111"> +38 096 111 11 11</a>
+              <a class="link_m-mail" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+              <ul class="m-social">
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Instagram</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Twitter</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">Facebook</a>
+                </li>
+                <li class="m-social__item">
+                  <a class="m-social__link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- Work examples -->
       <section class="section">
@@ -280,66 +347,82 @@
     </main>
 
     <!-- footer -->
-    <!-- <footer class="section-last">
+    <footer class="section-last">
       <div class="container container-footer">
-        <div class="footer-card-left">
-          <a class="logo" href="./index.html"
-            >Web<span class="accent-secondary">Studio</span></a
-          >
-          <ul class="footer-raws">
-            <li class="footer-list">
-              <address class="footer-address">
-                г. Киев, пр-т Леси Украинки, 26
-              </address>
-            </li>
-            <li class="footer-list">
-              <a class="footer-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-list">
-              <a class="footer-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="footer-card-center">
-          <h3 class="footer-title-ctr">присоединяйтесь</h3>
-          <ul class="social-list">
-            <li class="social-item footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s1instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s2twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s3facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-logo" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-s4linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-join">
+          <div class="footer-card-left">
+            <a class="logo logo-footer" href="./index.html"
+              >Web<span class="nav_color_light">Studio</span></a
+            >
+            <ul class="footer-raws">
+              <li class="footer-list">
+                <address class="footer-list__address">
+                  г. Киев, пр-т Леси Украинки, 26
+                </address>
+              </li>
+              <li class="footer-list">
+                <a class="footer-list__link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-list">
+                <a class="footer-list__link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer-card-center">
+            <h3 class="footer-title-ctr">присоединяйтесь</h3>
+            <ul class="social-list">
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s1instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s2twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s3facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item footer-social">
+                <a
+                  class="social-link social-link_background-color_dark"
+                  href=""
+                >
+                  <svg class="footer-social__logo" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-s4linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-card-right">
-          <h3 class="footer-title-right">Подпишитесь на рассылку</h3>
-          <div class="footer-card-right1">
+          <h3 class="footer-title-ctr footer-card-right__title">
+            Подпишитесь на рассылку
+          </h3>
+          <div class="footer-card-right__cont">
             <form class="footer-form" name="submit">
               <label class="submit-label">
                 <input
@@ -359,6 +442,14 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
+    <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
