--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <source
                       srcset="
                         ./images/work/img1.jpg 1x,
-                        ./images/work/img1@2x  2x
+                        ./images/work/img1@2x.jpg  2x
                       "
                       media="(min-width: 1200px)"
                     />
@@ -315,7 +315,7 @@
                     <source
                       srcset="
                         ./images/work/img2.jpg 1x,
-                        ./images/work/img2@2x  2x
+                        ./images/work/img2@2x.jpg  2x
                       "
                       media="(min-width: 1200px)"
                     />
@@ -337,7 +337,7 @@
                     <source
                       srcset="
                         ./images/work/img3.jpg 1x,
-                        ./images/work/img3@2x  2x
+                        ./images/work/img3@2x.jpg  2x
                       "
                       media="(min-width: 1200px)"
                     />
