Удалила старые фотки

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
-              <picture class="work-img__photo">
+              <picture class="team__photo">
                 <source
                   srcset="
                     ./images/team/img1-desktop.jpg    1x,
@@ -383,11 +383,11 @@
                   "
                   media="(min-width: 480px)"
                 />
-                <img
+                <img class="team__photo"
                   src="./images/team/img1-phone.jpg"
                   alt="мужчина в очках с бородой"
                 />
-              </picture class="work-img__photo">
+              </picture class="team__photo">
               <div class="team__member">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p class="team__text">Product Designer</p>
@@ -436,7 +436,7 @@
               </div>
             </li>
             <li class="team__item">
-              <picture>
+              <picture class="team__photo">
                 <source
                   srcset="
                     ./images/team/img2-desktop.jpg    1x,
@@ -458,7 +458,7 @@
                   "
                   media="(min-width: 480px)"
                 />
-                <img
+                <img class="team__photo"
                   src="./images/team/img2-phone.jpg"
                   alt="девушка блондинка в очках"
                 />
@@ -511,7 +511,7 @@
               </div>
             </li>
             <li class="team__item">
-              <picture>
+              <picture class="team__photo">
                 <source
                   srcset="
                     ./images/team/img3-desktop.jpg    1x,
@@ -533,7 +533,7 @@
                   "
                   media="(min-width: 480px)"
                 />
-                <img
+                <img class="team__photo"
                   src="./images/team/img3-phone.jpg"
                   alt="парень с бородой"
                 />
@@ -586,7 +586,7 @@
               </div>
             </li>
             <li class="team__item">
-              <picture>
+              <picture class="team__photo">
                 <source
                   srcset="
                     ./images/team/img4-desktop.jpg    1x,
@@ -608,7 +608,7 @@
                   "
                   media="(min-width: 480px)"
                 />
-                <img
+                <img class="team__photo"
                   src="./images/team/img4-phone.jpg"
                   alt="парень с бородой и очками"
                 />
