--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
           <ul class="work-card">
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img1-desktop.jpg    1x,
@@ -179,6 +179,7 @@
                     media="(min-width: 480px)"
                   />
                   <img
+                    class="work-card-cont__photo"
                     src="./images/portfolio/img1-phone.jpg"
                     alt="Ноутбук открыт на веб-странице"
                   />
@@ -198,7 +199,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img2-desktop.jpg    1x,
@@ -221,6 +222,7 @@
                     media="(min-width: 480px)"
                   />
                   <img
+                    class="work-card-cont__photo"
                     src="./images/portfolio/img2-phone.jpg"
                     alt="Игра в бaскетбол"
                   />
@@ -265,6 +267,7 @@
                     media="(min-width: 480px)"
                   />
                   <img
+                    class="work-card-cont__photo"
                     src="./images/portfolio/img3-phone.jpg"
                     alt="Логотип рыбного ресторана"
                   />
@@ -284,7 +287,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img4-desktop.jpg    1x,
@@ -306,7 +309,11 @@
                     "
                     media="(min-width: 480px)"
                   />
-                  <img src="./images/portfolio/img4-phone.jpg" alt="Наушники" />
+                  <img
+                    class="work-card-cont__photo"
+                    src="./images/portfolio/img4-phone.jpg"
+                    alt="Наушники"
+                  />
                 </picture>
                 <div class="work-card-opacity">
                   <p class="work-opacity-text">
@@ -323,7 +330,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img5-desktop.jpg    1x,
@@ -346,6 +353,7 @@
                     media="(min-width: 480px)"
                   />
                   <img
+                    class="work-card-cont__photo"
                     src="./images/portfolio/img5-phone.jpg"
                     alt="Две коробки"
                   />
@@ -365,7 +373,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img6-desktop.jpg    1x,
@@ -387,7 +395,11 @@
                     "
                     media="(min-width: 480px)"
                   />
-                  <img src="./images/portfolio/img6-phone.jpg" alt="ПК" />
+                  <img
+                    class="work-card-cont__photo"
+                    src="./images/portfolio/img6-phone.jpg"
+                    alt="ПК"
+                  />
                 </picture>
 
                 <div class="work-card-opacity">
@@ -405,7 +417,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img7-desktop.jpg    1x,
@@ -427,7 +439,11 @@
                     "
                     media="(min-width: 480px)"
                   />
-                  <img src="./images/portfolio/img7-phone.jpg" alt="Книга" />
+                  <img
+                    class="work-card-cont__photo"
+                    src="./images/portfolio/img7-phone.jpg"
+                    alt="Книга"
+                  />
                 </picture>
                 <div class="work-card-opacity">
                   <p class="work-opacity-text">
@@ -444,7 +460,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img8-desktop.jpg    1x,
@@ -466,7 +482,11 @@
                     "
                     media="(min-width: 480px)"
                   />
-                  <img src="./images/portfolio/img8-phone.jpg" alt="Логотип" />
+                  <img
+                    class="work-card-cont__photo"
+                    src="./images/portfolio/img8-phone.jpg"
+                    alt="Логотип"
+                  />
                 </picture>
                 <div class="work-card-opacity">
                   <p class="work-opacity-text">
@@ -483,7 +503,7 @@
             </li>
             <li class="work-card-item">
               <div class="work-card-cont">
-                <picture>
+                <picture class="work-card-cont__photo">
                   <source
                     srcset="
                       ./images/portfolio/img9-desktop.jpg    1x,
@@ -506,6 +526,7 @@
                     media="(min-width: 480px)"
                   />
                   <img
+                    class="work-card-cont__photo"
                     src="./images/portfolio/img9-phone.jpg"
                     alt="Мужчина работает за ноутбуком"
                   />
